--- a/ed.Rmd
+++ b/ed.Rmd
@@ -17,7 +17,7 @@ output:
 Para comenzar el desarrollo del reporte es necesario cargar incialmente el archivo .csv con la muestra
 
 ```{r}
-df <- read.csv("combo.csv")
+combos <- read.csv("combo.csv")
 ```
 
 # Comportamiento de la variable carne
@@ -25,8 +25,8 @@ df <- read.csv("combo.csv")
 ## Tendencia
 Calculamos las medidas de tendencia central
 ```{r}
-media_carne <- mean(df$Carne)
-mediana_carne <- median(df$Carne)
+media_carne <- mean(combos$Carne)
+mediana_carne <- median(combos$Carne)
 media_carne
 mediana_carne
 ```
